Fix default grid on mobile

--- a/source/scss/modules/_grid.scss
+++ b/source/scss/modules/_grid.scss
@@ -2,6 +2,10 @@
 	background-color: $bg-dark;
 	color: $text-white;
 	padding: 10px;
+	
+	@media (max-width: $tablet) {
+		margin: 5px;
+	}
 }
 
 .container {
@@ -56,25 +60,40 @@
 	padding-right: 10px;
 
 	&:first-child {
-		margin-left: 0;
+		padding-left: 0;
 	}
 
 	&:last-child {
-		margin-right: 0;
+		padding-right: 0;
 	}
 }
 
-@for $i from 1 through $total-col {
-	.col-#{$i} {
-  		width: 100%;
-  		padding: 0 10px;
+@media (min-width: $tablet + 1) {
 
-  		&:first-child {
+	@for $i from 1 through $total-col {
+
+		.col-#{$i} {
+			padding-left: 5px;
+			padding-right: 5px;
+  		max-width: percentage($i/$total-col);
+	  	-webkit-box-flex: 0;
+	  	-webkit-flex: 0 0 percentage($i/$total-col);
+	      	-ms-flex: 0 0 percentage($i/$total-col);
+							flex: 0 0 percentage($i/$total-col);
+							
+			&:first-child {
   			padding-left: 0;
   		}
 
   		&:last-child {
   			padding-right: 0;
-  		}
+			}
+			
+			@if $i <= 2 {
+  			padding-left: 5px;
+  			padding-right: 5px;
+			} 
+		}
 	}
+
 }
